--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "@types/mocha": "^9.1.1",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.3"
   }
 }
