--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/expect.js": "^0.3.29",
+    "@types/jest": "^29.0.3",
     "@types/mocha": "^9.1.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.3"
+  },
+  "dependencies": {
+    "chai": "^4.3.6",
+    "expect.js": "^0.3.1"
   }
 }
